# 01-fast-api-ai

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 77edcffc2cba_add_role_to_messages.py  b897cf9ec600_initial_tables.py  fa96cccfd36c_initial_tables.py
app/: __init__.py  deps.py  graph.py  llm.py  main.py  models.py  schemas.py
app/db/: __init__.py  base.py  session.py
app/models/: chat.py  message.py  usage.py
app/services/: __init__.py  chat_service.py  history_service.py
